# ele-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Architecture_Overview.md  ELE_Doctrine_v1.0.md  Usage_Guide.md
ele_engine/: __init__.py  ele_engine.py
numpy/: __init__.py
tests/: test_ele_engine.py
torch/: __init__.py
